--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -206,34 +206,33 @@ function setupSpeechRecognition() {
             const unit = urlParams.get('unit') || 'Unit1';
 
             try {
-                // Inicializa a conversa chamando /api/start
+                // Chama a rota /api/start para inicializar a conversa
                 const response = await fetch(`/api/start?uid=${userId}&level=${level}&unit=${unit}`);
+                if (!response.ok) throw new Error("Failed to initialize conversation.");
+
                 const data = await response.json();
 
-                if (response.ok) {
-                    chatHistory = data.chatHistory;
+                // Inicializa o histórico e oculta a mensagem até o botão ser pressionado
+                chatHistory = data.chatHistory;
 
-                    // Configuração do botão "Press to Start"
-                    speakButton.addEventListener("click", () => {
-                        if (speakButton.innerText === "Press to Start") {
-                            messageElement.innerText = data.response; // Exibe a mensagem inicial
-                            messageElement.style.visibility = "visible";
-                            speak(data.response); // Fala a mensagem inicial
-                            speakButton.innerText = "Press to Speak";
-                        } else {
-                            recognition.start(); // Inicia o reconhecimento de voz
-                        }
-                    });
-                } else {
-                    throw new Error("Failed to initialize conversation.");
-                }
+                speakButton.addEventListener("click", () => {
+                    if (speakButton.innerText === "Press to Start") {
+                        // Exibe e fala a mensagem inicial
+                        messageElement.innerText = data.response;
+                        messageElement.style.visibility = "visible";
+                        speak(data.response);
+                        speakButton.innerText = "Press to Speak";
+                    } else {
+                        recognition.start(); // Inicia o reconhecimento de voz
+                    }
+                });
             } catch (error) {
                 console.error("Error initializing conversation:", error);
                 messageElement.innerText = "Error initializing conversation. Try again.";
                 messageElement.style.visibility = "visible";
             }
         } else {
-            // Usuário não autenticado
+            // Se o usuário não estiver autenticado
             messageElement.innerText = "Please log in to start the conversation.";
             messageElement.style.visibility = "visible";
         }
