--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -208,6 +208,7 @@ function setupSpeechRecognition() {
 
             try {
                 // Chama a rota /api/start para inicializar a conversa
+                console.log(`Calling /api/start with userId=${userId}, level=${level}, unit=${unit}`);
                 const response = await fetch(`/api/start?uid=${userId}&level=${level}&unit=${unit}`);
                 if (!response.ok) throw new Error("Failed to initialize conversation.");
 
