--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -207,6 +207,7 @@
 
             try {
                 // Chama o servidor enviando o UID e parâmetros da URL
+                console.log("Sending to /api/start:", { uid: userId, level, unit }); // Adicione este log aqui
                 console.log(`Calling /api/start with userId=${userId}, level=${level}, unit=${unit}`);
                 const response = await fetch(`/api/start?uid=${userId}&level=${level}&unit=${unit}`);
                 
@@ -214,6 +215,7 @@
 
                 const data = await response.json();
                 console.log("Server Response:", data); // Verificar a resposta do servidor
+                console.log("Conversation initialized. API Response:", data); // Log para depuração
 
                 chatHistory = data.chatHistory; // Histórico inicial da conversa
                 messageElement.style.visibility = "visible";
