--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -205,6 +205,8 @@
             const level = urlParams.get('level') || 'Level1';
             const unit = urlParams.get('unit') || 'Unit1';
 
+ console.log("Sending to /api/start:", { uid: userId, level, unit }); // Log completo
+
             try {
                 // Chama o servidor enviando o UID e parâmetros da URL
                 console.log("Sending to /api/start:", { uid: userId, level, unit }); // Adicione este log aqui
