--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -210,8 +210,8 @@
             try {
                 // Chama o servidor enviando o UID e parâmetros da URL
                 console.log("Sending to /api/start:", { uid: userId, level, unit }); // Adicione este log aqui
-                console.log(`Calling /api/start with userId=${userId}, level=${level}, unit=${unit}`);
-                const response = await fetch(`/api/start?uid=${userId}&level=${level}&unit=${unit}`);
+                console.log(Calling /api/start with userId=${userId}, level=${level}, unit=${unit});
+                const response = await fetch(/api/start?uid=${userId}&level=${level}&unit=${unit});
                 
                 if (!response.ok) throw new Error("Failed to initialize conversation.");
 
@@ -255,4 +255,4 @@
         };
     </script>
 </body>
-</html>
+</html>                                                     
