--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -209,9 +209,9 @@
 
             try {
                 // Chama o servidor enviando o UID e parâmetros da URL
-                console.log("Sending to /api/start:", { uid: userId, level, unit }); // Adicione este log aqui
-                console.log(Calling /api/start with userId=${userId}, level=${level}, unit=${unit});
-                const response = await fetch(`/api/start?uid=${userId}&level=${level}&unit=${unit}`);
+               console.log("Sending to /api/start:", { uid: userId, level, unit }); // Log completo
+               console.log(`Calling /api/start with userId=${userId}, level=${level}, unit=${unit}`);
+               const response = await fetch(`/api/start?uid=${userId}&level=${level}&unit=${unit}`);
                 
                 if (!response.ok) throw new Error("Failed to initialize conversation.");
 
