--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -59,10 +59,10 @@
 </head>
 <body>
     <h1>Talk to Robot Samuel</h1>
-    <img id="robot-img" src="../../imagens/robo1_static.png" alt="Robot">
-    <p id="message" style="visibility: hidden;">Loading...</p>
-    <button id="speak-button">Press to Start</button>
-    <button id="back-button">Back</button>
+<img id="robot-img" src="../../imagens/robo1_static.png" alt="Robot">
+<p id="message" style="visibility: hidden;"></p> <!-- Mensagem inicial oculta -->
+<button id="speak-button">Press to Start</button>
+<button id="back-button">Back</button>
 
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
