--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -123,29 +123,29 @@
             robotImg.src = ROBOT_STATIC;
         }
 
-        // Síntese de voz
-        function speak(text, rate = 0.8) {
-            const synth = window.speechSynthesis;
-            const utterance = new SpeechSynthesisUtterance(text);
-            utterance.lang = "en-US";
-            utterance.rate = rate;
+       // Função para exibir e falar o texto
+function speak(text, rate = 0.8) {
+    const synth = window.speechSynthesis;
+    const utterance = new SpeechSynthesisUtterance(text);
+    utterance.lang = "en-US";
+    utterance.rate = rate;
 
-            utterance.onstart = () => {
-                isSpeaking = true;
-                resetStaticTimer();
-                robotImg.src = ROBOT_GIF;
-                speakButton.disabled = true;
-                speakButton.innerText = "Robot is speaking...";
-            };
-            utterance.onend = () => {
-                isSpeaking = false;
-                robotImg.src = ROBOT_STATIC;
-                speakButton.disabled = false;
-                speakButton.innerText = "Press to Speak";
-            };
+    utterance.onstart = () => {
+        isSpeaking = true;
+        messageElement.style.visibility = "visible"; // Exibir mensagem ao falar
+        messageElement.innerText = text; // Atualizar o texto da mensagem
+        speakButton.disabled = true; // Desabilitar o botão enquanto fala
+        speakButton.innerText = "Robot is speaking...";
+    };
 
-            synth.speak(utterance);
-        }
+    utterance.onend = () => {
+        isSpeaking = false;
+        speakButton.disabled = false; // Reabilitar o botão após falar
+        speakButton.innerText = "Press to Speak";
+    };
+
+    synth.speak(utterance);
+}
 
         // Reconhecimento de voz
         function setupSpeechRecognition() {
