--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -194,7 +194,7 @@
             };
         }
 
-        async function initializeConversation() {
+       async function initializeConversation() {
     firebase.auth().onAuthStateChanged(async (user) => {
         if (user) {
             userId = user.uid; // Captura o UID do usuário autenticado
@@ -205,28 +205,29 @@
             const level = urlParams.get('level') || 'Level1';
             const unit = urlParams.get('unit') || 'Unit1';
 
- console.log("Sending to /api/start:", { uid: userId, level, unit }); // Log completo
+            console.log("Sending to /api/start:", { uid: userId, level, unit }); // Log completo
 
             try {
                 // Chama o servidor enviando o UID e parâmetros da URL
-               console.log("Sending to /api/start:", { uid: userId, level, unit }); // Log completo
-               console.log(`Calling /api/start with userId=${userId}, level=${level}, unit=${unit}`);
-               const response = await fetch(`/api/start?uid=${userId}&level=${level}&unit=${unit}`);
+                console.log(`Calling /api/start with userId=${userId}, level=${level}, unit=${unit}`);
+                const response = await fetch(`/api/start?uid=${userId}&level=${level}&unit=${unit}`);
                 
                 if (!response.ok) throw new Error("Failed to initialize conversation.");
 
                 const data = await response.json();
                 console.log("Server Response:", data); // Verificar a resposta do servidor
-                console.log("Conversation initialized. API Response:", data); // Log para depuração
 
                 chatHistory = data.chatHistory; // Histórico inicial da conversa
-                messageElement.style.visibility = "visible";
+
+                // Prepara a mensagem inicial, mas não a exibe
                 messageElement.innerText = data.response;
 
+                // Adicione o evento ao botão para exibir a mensagem e começar a falar
                 speakButton.addEventListener("click", () => {
                     if (speakButton.innerText === "Press to Start") {
+                        messageElement.style.visibility = "visible"; // Torna visível o texto inicial
                         speak(data.response); // Fala a mensagem inicial
-                        speakButton.innerText = "Press to Speak";
+                        speakButton.innerText = "Press to Speak"; // Altera o texto do botão
                     } else {
                         recognition.start(); // Inicia o reconhecimento de voz
                     }
