--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -194,7 +194,7 @@
             };
         }
 
-      async function initializeConversation() {
+     async function initializeConversation() {
     firebase.auth().onAuthStateChanged(async (user) => {
         if (user) {
             userId = user.uid; // Captura o UID do usuário autenticado
@@ -221,16 +221,19 @@
                 chatHistory = data.chatHistory || [];
                 messageElement.innerText = data.response;
 
-                // Verifica se o botão já tem eventos para evitar múltiplas associações
+                // Exiba o texto inicial apenas após o clique no botão
+                messageElement.style.visibility = "hidden";
+
+                // Verifica se o botão já tem eventos associados para evitar múltiplas adições
                 if (!speakButton.hasAttribute('data-initialized')) {
                     speakButton.setAttribute('data-initialized', 'true');
 
-                    // Adicione o evento ao botão para exibir a mensagem e começar a falar
+                    // Adiciona o evento de clique ao botão
                     speakButton.addEventListener("click", () => {
                         if (speakButton.innerText === "Press to Start") {
-                            messageElement.style.visibility = "visible"; // Torna visível o texto inicial
-                            speak(data.response); // Fala a mensagem inicial
-                            speakButton.innerText = "Press to Speak"; // Altera o texto do botão
+                            messageElement.style.visibility = "visible"; // Mostra a mensagem inicial
+                            speak(data.response); // Faz o robô falar a mensagem inicial
+                            speakButton.innerText = "Press to Speak"; // Atualiza o texto do botão
                         } else {
                             recognition.start(); // Inicia o reconhecimento de voz
                         }
@@ -249,15 +252,16 @@
     });
 }
 
-        document.addEventListener("visibilitychange", () => {
-            if (document.hidden) window.speechSynthesis.cancel();
-        });
+// Configuração inicial quando a página carrega
+document.addEventListener("visibilitychange", () => {
+    if (document.hidden) window.speechSynthesis.cancel(); // Cancela a fala se a aba for minimizada
+});
 
-        window.onload = () => {
-            setupSpeechRecognition();
-            initializeConversation();
-            startStaticImageTimer();
-        };
+window.onload = () => {
+    setupSpeechRecognition(); // Configura o reconhecimento de voz
+    initializeConversation(); // Inicializa a conversa
+    startStaticImageTimer(); // Inicia o timer de inatividade para troca de imagem
+};
     </script>
 </body>
 </html>                                                     
