--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -194,48 +194,38 @@
             };
         }
 
-     async function initializeConversation() {
+    async function initializeConversation() {
     firebase.auth().onAuthStateChanged(async (user) => {
         if (user) {
-            userId = user.uid; // Captura o UID do usuário autenticado
+            userId = user.uid;
             console.log("User authenticated. User ID:", userId);
 
-            // Captura os parâmetros da URL
             const urlParams = new URLSearchParams(window.location.search);
             const level = urlParams.get('level') || 'Level1';
             const unit = urlParams.get('unit') || 'Unit1';
 
-            console.log("Sending to /api/start:", { uid: userId, level, unit });
-
             try {
-                // Chama o servidor enviando o UID e parâmetros da URL
-                console.log(`Calling /api/start with userId=${userId}, level=${level}, unit=${unit}`);
                 const response = await fetch(`/api/start?uid=${userId}&level=${level}&unit=${unit}`);
-                
                 if (!response.ok) throw new Error("Failed to initialize conversation.");
 
                 const data = await response.json();
                 console.log("Server Response:", data);
 
-                // Salva o histórico inicial e prepara a mensagem inicial
                 chatHistory = data.chatHistory || [];
                 messageElement.innerText = data.response;
 
-                // Exiba o texto inicial apenas após o clique no botão
-                messageElement.style.visibility = "hidden";
+                messageElement.style.visibility = "hidden"; // Mensagem inicial será exibida após o clique
 
-                // Verifica se o botão já tem eventos associados para evitar múltiplas adições
                 if (!speakButton.hasAttribute('data-initialized')) {
                     speakButton.setAttribute('data-initialized', 'true');
 
-                    // Adiciona o evento de clique ao botão
                     speakButton.addEventListener("click", () => {
                         if (speakButton.innerText === "Press to Start") {
-                            messageElement.style.visibility = "visible"; // Mostra a mensagem inicial
-                            speak(data.response); // Faz o robô falar a mensagem inicial
-                            speakButton.innerText = "Press to Speak"; // Atualiza o texto do botão
+                            messageElement.style.visibility = "visible";
+                            speak(data.response); // Fala a mensagem inicial
+                            speakButton.innerText = "Press to Speak";
                         } else {
-                            recognition.start(); // Inicia o reconhecimento de voz
+                            recognition.start();
                         }
                     });
                 }
