--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -168,31 +168,36 @@
                 speakButton.innerText = "Press to Speak";
             };
 
-            recognition.onresult = async (event) => {
-                const userSpeech = event.results[0][0].transcript;
-                console.log("User speech:", userSpeech);
+           recognition.onresult = async (event) => {
+    const userSpeech = event.results[0][0].transcript;
+    console.log("User speech:", userSpeech);
 
-                if (!userId) {
-                    alert("User ID is missing. Please log in again.");
-                    return;
-                }
+    if (!userId) {
+        alert("User ID is missing. Please log in again.");
+        return;
+    }
 
-                try {
-                    const response = await fetch('/api/chat', {
-                        method: 'POST',
-                        headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify({ uid: userId, message: userSpeech, chatHistory }),
-                    });
-                    const data = await response.json();
-                    chatHistory = data.chatHistory;
-                    messageElement.innerText = data.response;
-                    speak(data.response);
-                } catch (error) {
-                    console.error("Error communicating with the server:", error);
-                    messageElement.innerText = "Error communicating with the server.";
-                }
-            };
+    try {
+        const response = await fetch('/api/chat', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ uid: userId, message: userSpeech, chatHistory }),
+        });
+        const data = await response.json();
+
+        if (!data.response) {
+            console.error("Erro: Resposta da IA ausente.");
+            return;
         }
+
+        chatHistory = data.chatHistory; // Atualiza o histórico completo
+        messageElement.innerText = data.response;
+        speak(data.response); // Fala a resposta gerada
+    } catch (error) {
+        console.error("Error communicating with the server:", error);
+        messageElement.innerText = "Error communicating with the server.";
+    }
+};
 
     async function initializeConversation() {
     firebase.auth().onAuthStateChanged(async (user) => {
