--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -168,7 +168,7 @@
                 speakButton.innerText = "Press to Speak";
             };
 
-           recognition.onresult = async (event) => {
+         recognition.onresult = async (event) => {
     const userSpeech = event.results[0][0].transcript;
     console.log("User speech:", userSpeech);
 
@@ -197,7 +197,7 @@
         console.error("Error communicating with the server:", error);
         messageElement.innerText = "Error communicating with the server.";
     }
-};
+}; // Fechamento do reconhecimento de voz
 
     async function initializeConversation() {
     firebase.auth().onAuthStateChanged(async (user) => {
