--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -237,7 +237,7 @@ async function initializeConversation() {
                 }
             } catch (error) {
                 console.error("Error initializing conversation:", error);
-                messageElement.innerText = "Error initializing conversation. Try again.";
+                messageElement.innerText = "Error initializing conversation. Please refresh and try again.";
                 messageElement.style.visibility = "visible";
             }
         } else {
