--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -236,7 +236,9 @@ async function initializeConversation() {
                     });
                 }
             } catch (error) {
-                console.error("Error initializing conversation:", error);
+               console.error("Error initializing conversation:", error);
+               messageElement.innerText = "An unexpected error occurred. Try again later.";
+               speakButton.disabled = true;
                 messageElement.innerText = "Error initializing conversation. Please refresh and try again.";
                 messageElement.style.visibility = "visible";
             }
